--- a/wwwroot/assets/css/style.css
+++ b/wwwroot/assets/css/style.css
@@ -275,13 +275,11 @@ header {
 .service-wrap {
 	width: 100%;
 	height: 100%;
-	/* border: 1px solid var(--FontColor); */
-	border: 1px solid beige;
+	border: 1px solid var(--FontColor);
 	text-align: center;
 	display: block;
 	border-radius: 50%;
-	background: beige;
-	/* background: var(--FontColor); */
+	background: var(--FontColor);
 	box-shadow: 2px 5px 5px 1px rgb(0 0 0 / 50%);
 }
 .service-wrap i {
@@ -464,7 +462,6 @@ header {
     margin: 20px;
     padding-bottom: 0.8em;
 	height: 50rem;
-	padding-top: 20px;
 }
 
 .testimonila-block img {
@@ -922,7 +919,7 @@ li {
 	font-weight: 500;
     color: #000000;
     margin: 0px;
-    background: var(--FontColor);
+    background: beige;
     padding-right: 20px;
 }
 
@@ -1061,8 +1058,4 @@ i.pe-7s-menu:hover {
     padding-top: 72px;
     max-width: 400px;
     max-height: 400px;
-}
-
-.address  li a {
-	color : white;
 }
